validation: align input rules